syntax = "proto3";

package envoy.config.retry.omit_host_metadata.v2;

import "envoy/api/v2/core/base.proto";

import "udpa/annotations/migrate.proto";

option java_package = "io.envoyproxy.envoy.config.retry.omit_host_metadata.v2";
option java_outer_classname = "OmitHostMetadataConfigProto";
option java_multiple_files = true;
option (udpa.annotations.file_migrate).move_to_package =
    "envoy.extensions.retry.omit_host_metadata.v3alpha";

// [#protodoc-title: Omit host metadata retry predicate]

// A retry host predicate that can be used to reject a host based on
// predefined metadata match criteria
// [#extension: envoy.retry_host_predicates.omit_host_metadata]
message OmitHostMetadataConfig {
  // Retry host predicate metadata match criteria. The hosts in
  // the upstream cluster with metadata matching will be omitted while
  // attempting retry of a failed request. The filter name should be
  // specified as *envoy.lb*.
  api.v2.core.Metadata metadata_match = 1;
}
